見出しの変更

--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
             <ul class="row">
                 <li class="col-lg-4 col-xs-12 mb-5" id="head01">
                     <img src="images/img1.jpg" alt="" class="img-thumbnail rounded-circle d-block mx-auto">
-                    <h2>見出し01</h2>
+                    <h2>リストスタイル</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsa est itaque a, doloribus laborum pariatur maxime aliquid reprehenderit obcaecati voluptate quod molestiae rerum at exercitationem sit natus perspiciatis dicta atque repellat, porro voluptas soluta inventore ipsum. Facere, molestiae inventore ab dolorum quidem, possimus incidunt aspernatur praesentium iste voluptates vitae.</p>
                     <a href="#" class="btn btn-primary me-2">詳細</a><a href="#" class="btn btn-warning">公式</a>
                 </li>
                 <li class="col-lg-4 col-xs-12 mb-5" id="head02">
                     <img src="images/img2.jpg" alt="" class="img-thumbnail rounded-circle d-block mx-auto">
-                    <h2>見出し02</h2>
+                    <h2>リストスタイル</h2>
                     <p>Enim ipsum suscipit perspiciatis cupiditate quae voluptas est nulla similique perferendis et debitis, doloribus obcaecati ab quo error quibusdam a, repellendus illo molestias praesentium voluptate quaerat recusandae? Amet, ratione. Consequuntur, quidem excepturi nam corrupti accusantium iusto blanditiis itaque aspernatur. Blanditiis maxime consequatur dolorem in, fugit nobis distinctio dolor est voluptas?</p>
                     <a href="#" class="btn btn-primary me-2">詳細</a><a href="#" class="btn btn-warning">公式</a>
                 </li>
                 <li class="col-lg-4 col-xs-12 mb-5" id="head03">
                     <img src="images/img3.jpg" alt="" class="img-thumbnail rounded-circle d-block mx-auto">
-                    <h2>見出し03</h2>
+                    <h2>リストスタイル</h2>
                     <p>Quam magni ratione temporibus et unde fugit veniam assumenda libero cum ab, eos doloremque sunt exercitationem aspernatur id vitae tenetur eveniet. Culpa iusto quod inventore ut facilis similique saepe dignissimos facere quasi, sapiente dolorum quo repudiandae veniam recusandae amet! Fugit aliquid enim nisi, tempore corporis autem non velit quos quia.</p>
                     <a href="#" class="btn btn-primary me-2">詳細</a><a href="#" class="btn btn-warning">公式</a>
                 </li>
